{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 67,
  "lineage": "601f0ea0-141c-5b21-52cd-243977970811",
  "resources": [
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "managed_ingress_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093304591402:security-group-rule/sgr-09c4219df314d5733",
            "cidr_ipv4": "172.16.0.0/16",
            "cidr_ipv6": null,
            "description": "Allow inbound traffic from CIDR blocks",
            "from_port": null,
            "id": "sgr-09c4219df314d5733",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05b0fc7606bb968e6",
            "security_group_rule_id": "sgr-09c4219df314d5733",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_cloudwatch_log_group.default",
            "module.eks_cluster.aws_eks_cluster.default",
            "module.eks_cluster.aws_iam_policy.cluster_elb_service_role",
            "module.eks_cluster.aws_iam_role.default",
            "module.eks_cluster.aws_iam_role_policy_attachment.amazon_eks_cluster_policy",
            "module.eks_cluster.aws_iam_role_policy_attachment.amazon_eks_service_policy",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_elb_service_role",
            "module.eks_cluster.aws_kms_alias.cluster",
            "module.eks_cluster.aws_kms_key.cluster",
            "module.eks_cluster.data.aws_iam_policy_document.assume_role",
            "module.eks_cluster.data.aws_iam_policy_document.cluster_elb_service_role",
            "module.eks_cluster.data.aws_partition.current",
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_instance.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_network_acl.private",
            "module.subnets.aws_network_acl.public",
            "module.subnets.aws_network_acl_rule.private4_egress",
            "module.subnets.aws_network_acl_rule.private4_ingress",
            "module.subnets.aws_network_acl_rule.private6_egress",
            "module.subnets.aws_network_acl_rule.private6_ingress",
            "module.subnets.aws_network_acl_rule.public4_egress",
            "module.subnets.aws_network_acl_rule.public4_ingress",
            "module.subnets.aws_network_acl_rule.public6_egress",
            "module.subnets.aws_network_acl_rule.public6_ingress",
            "module.subnets.aws_route.nat4",
            "module.subnets.aws_route.nat_instance",
            "module.subnets.aws_route.private6",
            "module.subnets.aws_route.private_nat64",
            "module.subnets.aws_route.public",
            "module.subnets.aws_route.public6",
            "module.subnets.aws_route.public_nat64",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_route_table_association.private",
            "module.subnets.aws_route_table_association.public",
            "module.subnets.aws_security_group.nat_instance",
            "module.subnets.aws_security_group_rule.nat_instance_egress",
            "module.subnets.aws_security_group_rule.nat_instance_ingress",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_ami.nat_instance",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.subnets.module.utils.data.aws_iam_policy_document.by_account",
            "module.subnets.module.utils.data.aws_iam_policy_document.by_region",
            "module.subnets.module.utils.data.aws_regions.complete",
            "module.subnets.module.utils.data.aws_regions.default",
            "module.subnets.module.utils.data.aws_regions.not_opted_in",
            "module.subnets.module.utils.data.aws_regions.opted_in",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "managed_ingress_security_groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093304591402:security-group-rule/sgr-00386dcc192ef869a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow inbound traffic from existing Security Groups",
            "from_port": null,
            "id": "sgr-00386dcc192ef869a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01febacc47312a17e",
            "security_group_id": "sg-05b0fc7606bb968e6",
            "security_group_rule_id": "sgr-00386dcc192ef869a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_cloudwatch_log_group.default",
            "module.eks_cluster.aws_eks_cluster.default",
            "module.eks_cluster.aws_iam_policy.cluster_elb_service_role",
            "module.eks_cluster.aws_iam_role.default",
            "module.eks_cluster.aws_iam_role_policy_attachment.amazon_eks_cluster_policy",
            "module.eks_cluster.aws_iam_role_policy_attachment.amazon_eks_service_policy",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_elb_service_role",
            "module.eks_cluster.aws_kms_alias.cluster",
            "module.eks_cluster.aws_kms_key.cluster",
            "module.eks_cluster.data.aws_iam_policy_document.assume_role",
            "module.eks_cluster.data.aws_iam_policy_document.cluster_elb_service_role",
            "module.eks_cluster.data.aws_partition.current",
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_instance.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_network_acl.private",
            "module.subnets.aws_network_acl.public",
            "module.subnets.aws_network_acl_rule.private4_egress",
            "module.subnets.aws_network_acl_rule.private4_ingress",
            "module.subnets.aws_network_acl_rule.private6_egress",
            "module.subnets.aws_network_acl_rule.private6_ingress",
            "module.subnets.aws_network_acl_rule.public4_egress",
            "module.subnets.aws_network_acl_rule.public4_ingress",
            "module.subnets.aws_network_acl_rule.public6_egress",
            "module.subnets.aws_network_acl_rule.public6_ingress",
            "module.subnets.aws_route.nat4",
            "module.subnets.aws_route.nat_instance",
            "module.subnets.aws_route.private6",
            "module.subnets.aws_route.private_nat64",
            "module.subnets.aws_route.public",
            "module.subnets.aws_route.public6",
            "module.subnets.aws_route.public_nat64",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_route_table_association.private",
            "module.subnets.aws_route_table_association.public",
            "module.subnets.aws_security_group.nat_instance",
            "module.subnets.aws_security_group_rule.nat_instance_egress",
            "module.subnets.aws_security_group_rule.nat_instance_ingress",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_ami.nat_instance",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.subnets.module.utils.data.aws_iam_policy_document.by_account",
            "module.subnets.module.utils.data.aws_iam_policy_document.by_region",
            "module.subnets.module.utils.data.aws_regions.complete",
            "module.subnets.module.utils.data.aws_regions.default",
            "module.subnets.module.utils.data.aws_regions.not_opted_in",
            "module.subnets.module.utils.data.aws_regions.opted_in",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0272cd3cd39d76d66",
            "arn": "arn:aws:ec2:us-east-2:093304591402:elastic-ip/eipalloc-0272cd3cd39d76d66",
            "association_id": "eipassoc-0724a5d2be88f7c21",
            "domain": "vpc",
            "id": "eipalloc-0272cd3cd39d76d66",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0d034c5f07d3f4357",
            "private_dns": "ip-172-16-115-15.us-east-2.compute.internal",
            "private_ip": "172.16.115.15",
            "public_dns": "ec2-18-221-59-171.us-east-2.compute.amazonaws.com",
            "public_ip": "18.221.59.171",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "nat",
              "Name": "ev-dev-eks-nat-use2a",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "ev-dev-eks-nat-use2a",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0272cd3cd39d76d66",
            "association_id": "eipassoc-0724a5d2be88f7c21",
            "connectivity_type": "public",
            "id": "nat-035e17110a1cc0f13",
            "network_interface_id": "eni-0d034c5f07d3f4357",
            "private_ip": "172.16.115.15",
            "public_ip": "18.221.59.171",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00d05d8b1c03face7",
            "tags": {
              "Attributes": "nat",
              "Name": "ev-dev-eks-nat-use2a",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "ev-dev-eks-nat-use2a",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_instance.nat_instance",
            "module.subnets.aws_security_group.nat_instance",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_ami.nat_instance",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093304591402:network-acl/acl-0d5a6a3d13558e905",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 111,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d5a6a3d13558e905",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 111,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "093304591402",
            "subnet_ids": [
              "subnet-09ea19677ae4a46ca",
              "subnet-0dc2bf8c3d528dfda"
            ],
            "tags": {
              "Attributes": "private",
              "Name": "ev-dev-eks-private",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "ev-dev-eks-private",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0eb41118d1855cfc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093304591402:network-acl/acl-02f7a87cd7d8cbadd",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 111,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-02f7a87cd7d8cbadd",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 111,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "093304591402",
            "subnet_ids": [
              "subnet-00d05d8b1c03face7",
              "subnet-017a41bd61f22a9e1"
            ],
            "tags": {
              "Attributes": "public",
              "Name": "ev-dev-eks-public",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "ev-dev-eks-public",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0eb41118d1855cfc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private4_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-51583072",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d5a6a3d13558e905",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private4_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-376418781",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d5a6a3d13558e905",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-761244830",
            "ipv6_cidr_block": "::/0",
            "network_acl_id": "acl-0d5a6a3d13558e905",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 111,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private6_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1279533682",
            "ipv6_cidr_block": "::/0",
            "network_acl_id": "acl-0d5a6a3d13558e905",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 111,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public4_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1682877634",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-02f7a87cd7d8cbadd",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public4_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-785395373",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-02f7a87cd7d8cbadd",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1241651260",
            "ipv6_cidr_block": "::/0",
            "network_acl_id": "acl-02f7a87cd7d8cbadd",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 111,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public6_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1962654978",
            "ipv6_cidr_block": "::/0",
            "network_acl_id": "acl-02f7a87cd7d8cbadd",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 111,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08b240ac31755bec91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-035e17110a1cc0f13",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08b240ac31755bec9",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_instance.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_security_group.nat_instance",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_ami.nat_instance",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b671a906b5b931271080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-035e17110a1cc0f13",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b671a906b5b93127",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_instance.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_security_group.nat_instance",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_ami.nat_instance",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat64",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "64:ff9b::/96",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08b240ac31755bec92696003898",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-035e17110a1cc0f13",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08b240ac31755bec9",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_instance.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_security_group.nat_instance",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_ami.nat_instance",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "64:ff9b::/96",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b671a906b5b931272696003898",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-035e17110a1cc0f13",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b671a906b5b93127",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_instance.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_security_group.nat_instance",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_ami.nat_instance",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-071d9c439a9a652e3",
            "id": "r-rtb-076e2416a0f10d5e21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-076e2416a0f10d5e2",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-071d9c439a9a652e3",
            "id": "r-rtb-076e2416a0f10d5e22750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-076e2416a0f10d5e2",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093304591402:route-table/rtb-08b240ac31755bec9",
            "id": "rtb-08b240ac31755bec9",
            "owner_id": "093304591402",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "64:ff9b::/96",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-035e17110a1cc0f13",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-035e17110a1cc0f13",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "private",
              "Name": "ev-dev-eks-private-use2a",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "ev-dev-eks-private-use2a",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb41118d1855cfc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093304591402:route-table/rtb-0b671a906b5b93127",
            "id": "rtb-0b671a906b5b93127",
            "owner_id": "093304591402",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "64:ff9b::/96",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-035e17110a1cc0f13",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-035e17110a1cc0f13",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "private",
              "Name": "ev-dev-eks-private-use2b",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "ev-dev-eks-private-use2b",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb41118d1855cfc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093304591402:route-table/rtb-076e2416a0f10d5e2",
            "id": "rtb-076e2416a0f10d5e2",
            "owner_id": "093304591402",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-071d9c439a9a652e3",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-071d9c439a9a652e3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "public",
              "Name": "ev-dev-eks-public",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "ev-dev-eks-public",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb41118d1855cfc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ca9a3435a5e5e2e",
            "route_table_id": "rtb-08b240ac31755bec9",
            "subnet_id": "subnet-09ea19677ae4a46ca"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ae95e5f861f827f",
            "route_table_id": "rtb-0b671a906b5b93127",
            "subnet_id": "subnet-0dc2bf8c3d528dfda"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd4e6d0476c170e6",
            "route_table_id": "rtb-076e2416a0f10d5e2",
            "subnet_id": "subnet-00d05d8b1c03face7"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0958df402ebab5d8b",
            "route_table_id": "rtb-076e2416a0f10d5e2",
            "subnet_id": "subnet-017a41bd61f22a9e1"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093304591402:subnet/subnet-09ea19677ae4a46ca",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.0.0/19",
            "enable_dns64": true,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ea19677ae4a46ca",
            "ipv6_cidr_block": "2600:1f16:1e5a:5600::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0c7cf4dc9a62f3507",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "093304591402",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "ev-dev-eks-private-use2a",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "ev-dev-eks-private-use2a",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0eb41118d1855cfc8"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093304591402:subnet/subnet-0dc2bf8c3d528dfda",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.32.0/19",
            "enable_dns64": true,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc2bf8c3d528dfda",
            "ipv6_cidr_block": "2600:1f16:1e5a:5601::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0c19fd46daee6ea2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "093304591402",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "ev-dev-eks-private-use2b",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "ev-dev-eks-private-use2b",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0eb41118d1855cfc8"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093304591402:subnet/subnet-00d05d8b1c03face7",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d05d8b1c03face7",
            "ipv6_cidr_block": "2600:1f16:1e5a:5603::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0a95f62e4112fdcca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "093304591402",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "ev-dev-eks-public-use2a",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "ev-dev-eks-public-use2a",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0eb41118d1855cfc8"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093304591402:subnet/subnet-017a41bd61f22a9e1",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017a41bd61f22a9e1",
            "ipv6_cidr_block": "2600:1f16:1e5a:5604::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-01938b2064d3b12a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "093304591402",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "ev-dev-eks-public-use2b",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "ev-dev-eks-public-use2b",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0eb41118d1855cfc8"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093304591402:security-group/sg-01febacc47312a17e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-01febacc47312a17e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "093304591402",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ev-dev-eks-default",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "ev-dev-eks-default",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0eb41118d1855cfc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093304591402:internet-gateway/igw-071d9c439a9a652e3",
            "id": "igw-071d9c439a9a652e3",
            "owner_id": "093304591402",
            "tags": {
              "Name": "ev-dev-eks",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "ev-dev-eks",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0eb41118d1855cfc8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:093304591402:vpc/vpc-0eb41118d1855cfc8",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-053a4badf65193fb4",
            "default_route_table_id": "rtb-03b1e08896b251785",
            "default_security_group_id": "sg-01febacc47312a17e",
            "dhcp_options_id": "dopt-d9e84fb0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eb41118d1855cfc8",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-00b4c06fefab70eb4",
            "ipv6_cidr_block": "2600:1f16:1e5a:5600::/56",
            "ipv6_cidr_block_network_border_group": "us-east-2",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03b1e08896b251785",
            "owner_id": "093304591402",
            "tags": {
              "Name": "ev-dev-eks",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "ev-dev-eks",
              "Namespace": "ev",
              "Stage": "dev",
              "kubernetes.io/cluster/ev-dev-eks-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}